Adjust zoom bar button layout to avoid 'Fit' button moving around when 'Full' button is hidden and avoid flex wrap with pinned controls on Safari

--- a/sass/_zoom-bar.scss
+++ b/sass/_zoom-bar.scss
@@ -21,6 +21,12 @@
     margin-right: 16px;
 }
 
+.zoom-bar-button-container{
+    display: flex;
+    justify-content: space-between;
+    width: $zoom_bar_button_container_width;
+}
+
 @include pinned_controls_mq{
     .zoom-bar-container{
 		font-size: 12px;
@@ -33,7 +39,7 @@
 		//-1 pixel so it hides border
         width: calc(100% - #{$pinned_dither_controls_width});
         label{
-            flex-basis: calc(100% - 98px);
+            flex-basis: calc(100% - #{$zoom_bar_button_container_width});
             margin-bottom: 0;
         }
         input[type="range"]{
